fixed overflow to prevent scrolling

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
     background-color: #fdc52c;
+    overflow: hidden;
 }
 
 .dinkles {
     position: absolute;
     top: 50%; left: 50%;
-    transform: scale(0.5, 0.5)
 }
